# dacapo-toolbox

./: .buildinfo  .gitignore  README.md  api.html  conf.html  genindex.html  index.html  install.html  justfile  objects.inv  overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  conf.doctree  environment.pickle  index.doctree  install.doctree  overview.doctree
.doctrees/nbsphinx/tutorials/dataset/: cremi.ipynb
.doctrees/nbsphinx/tutorials/minimal_tutorial/: minimal_tutorial.ipynb
.doctrees/tutorials/dataset/: cremi.doctree  dataset_overview.doctree
.doctrees/tutorials/minimal_tutorial/: minimal_tutorial.doctree
.github/workflows/: docs.yaml  mypy.yaml  tests.yaml  ty.yaml
_sources/: api.rst.txt  conf.py.txt  index.rst.txt  overview.rst.txt
_sources/tutorials/dataset/: cremi.ipynb.txt  dataset_overview.ipynb.txt
_sources/tutorials/minimal_tutorial/: minimal_tutorial.ipynb.txt
docs/source/: api.rst  index.rst  install.rst  overview.rst
docs/source/notebooks/: minimal_tutorial.py
examples/: affs.py  lsds.py
src/dacapo_toolbox/: bioimageio.py  convenience.py  conversion_hooks.py  dataset.py  model.py  postprocessing.py  sample_datasets.py  tmp.py
src/dacapo_toolbox/architectures/: __init__.py  architecture.py  cnnectome_unet.py  model_zoo.py  wrapped_architecture.py
src/dacapo_toolbox/architectures/impl/: cnnectome_unet_impl.py
src/dacapo_toolbox/datasplits/: __init__.py  datasplit.py  datasplit_config.py  dummy_datasplit.py  dummy_datasplit_config.py  simple_config.py  train_validate_datasplit.py  train_validate_datasplit_config.py
src/dacapo_toolbox/datasplits/datasets/: __init__.py  dataset_config.py  dummy_dataset_config.py  raw_gt_dataset_config.py  simple.py
src/dacapo_toolbox/depricated/: bioimageio.py  tmp.py
src/dacapo_toolbox/depricated/architectures/: __init__.py  model_zoo.py  unet.py
src/dacapo_toolbox/depricated/arraytypes/: __init__.py
src/dacapo_toolbox/depricated/datasplits/: simple_config.py
src/dacapo_toolbox/depricated/gp/: __init__.py  dacapo_create_target.py
src/dacapo_toolbox/depricated/tasks/: __init__.py  affinities_task_config.py  distance_task_config.py  dummy_task_config.py  hot_distance_task_config.py  inner_distance_task_config.py  one_hot_task_config.py  task_config.py
src/dacapo_toolbox/depricated/utils/: preview.py  voi.py
src/dacapo_toolbox/gp/: dacapo_create_target.py  elastic_augment_fuse.py
src/dacapo_toolbox/modules/: distance_head.py
src/dacapo_toolbox/starts/: cosem_start.py  start.py
src/dacapo_toolbox/tasks/: __init__.py  affinities_task.py  affinities_task_config.py  hot_distance_task.py  task_config.py
src/dacapo_toolbox/tasks/evaluators/: binary_segmentation_evaluator.py  evaluator.py  instance_evaluator.py
src/dacapo_toolbox/tasks/post_processors/: argmax_post_processor.py  post_processor.py  watershed_post_processor.py
src/dacapo_toolbox/tasks/predictors/: affinities_predictor.py  distance_predictor.py  dummy_predictor.py  hot_distance_predictor.py  (+3 more)
src/dacapo_toolbox/trainers/: dummy_trainer_config.py  gunpowder_trainer_config.py  trainer_config.py
src/dacapo_toolbox/transforms/: affs.py  distances.py  lsds.py  weight_balancing.py
src/dacapo_toolbox/utils/: balance_weights.py  pipeline.py
src/dacapo_toolbox/vis/: preview.py
tests/: serde.py  test_architectures.py  test_arrays.py  test_convenience.py  test_gp_arraysource.py  test_options.py  test_trainers.py  transforms.py
tests/depricated/: serde.py  test_arrays.py  test_dataset.py  test_preprocessing.py
tests/fixtures/: __init__.py  architectures.py  arrays.py  datasplits.py  evaluators.py  losses.py  post_processors.py  predictors.py  runs.py  tasks.py  trainers.py
tutorials/: minimal_tutorial.py
tutorials/dataset/: cremi.html  cremi.ipynb  cremi.py  dataset_overview.html  dataset_overview.py  dataset_training.py  dataset_tutorial.py
tutorials/minimal_tutorial/: minimal_tutorial.html  minimal_tutorial.py
(+17 files in other folders)
