[project]
name = "dacapo-toolbox"
version = "0.1.0"
description = "A suite of tools for large scale ND training."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edt>=3.0.0",
    "funlib-persistence>=0.6",
    "gunpowder>=1.4.0",
    "torch>=2.6.0",
]
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "pytest-xdist>=3.6.1",
]

[tool.mypy]
files = "src/dacapo_toolbox"
strict = false
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true
exclude = ["docs/*"]

[[tool.mypy.overrides]]
module = [
    "edt.*",
]
ignore_missing_imports = true

[tool.setuptools.package-data]
"dacapo_toolbox" = ["py.typed"]

[tool.ruff.lint]
per-file-ignores = { "tutorials/*.py" = ["E402"] }
