[project]
name = "dacapo-toolbox"
version = "0.1.0"
description = "A suite of tools for large scale ND training."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edt>=3.0.0",
    "funlib-persistence>=0.6",
    "gunpowder>=1.4.0",
    "scikit-learn>=1.7.1",
    "torch>=2.6.0",
]
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "pytest-xdist>=3.6.1",
]
examples = [
    "matplotlib>=3.10.3",
    "torchvision>=0.22.0",
]
docs = [
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mwatershed>=0.5.3",
    "tems>=1.0.3",
    "torchvision>=0.22.0",
    "volara>=1.0.1",
    "volara-torch>=1.0.0",
    "wget>=3.2",
    "jupytext>=1.17.2",
]

[tool.mypy]
files = "src/dacapo_toolbox"
strict = false
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true
exclude = ["docs/*"]

[[tool.mypy.overrides]]
module = [
    "edt.*",
]
ignore_missing_imports = true

[tool.setuptools.package-data]
"dacapo_toolbox" = ["py.typed"]

[tool.ruff.lint]
per-file-ignores = { "tutorials/*.py" = ["E402"] }

[tool.uv.sources]
gunpowder = { git = "https://github.com/funkelab/gunpowder", rev = "patch-1.4.2" }
volara = { git = "https://github.com/e11bio/volara", rev = "benchmarking" }
volara-torch = { git = "https://github.com/e11bio/volara-torch", rev = "bugfix" }
