[project]
name = "dacapo-toolbox"
version = "0.1.0"
description = "A suite of tools for large scale ND training."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edt>=3.0.0",
    "funlib-persistence>=0.6",
    "gunpowder>=1.4.0",
    "scikit-learn>=1.7.1",
    "torch>=2.6.0",
]
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
    "pytest-xdist>=3.6.1",
    "ty>=0.0.1a18",
]
examples = [
    "matplotlib>=3.10.3",
    "torchvision>=0.22.0",
]
docs = [
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mwatershed>=0.5.3",
    "tems>=1.0.3",
    "torchvision>=0.22.0",
    "volara>=1.0.1",
    "volara-torch>=1.0.0",
    "wget>=3.2",
    "jupytext>=1.17.2",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-material>=0.0.36",
    "sphinx-click>=6.0",
    "sphinx-rtd-theme>=2.0",
    "nbsphinx>=0.9.7",
    "myst-parser>=4.0",
]


[tool.setuptools.package-data]
"dacapo_toolbox" = ["py.typed"]

[tool.ruff.lint]
per-file-ignores = { "tutorials/*.py" = ["E402"] }

[tool.uv.sources]
gunpowder = { git = "https://github.com/funkelab/gunpowder", rev = "patch-1.4.2" }
volara = { git = "https://github.com/e11bio/volara" }
volara-torch = { git = "https://github.com/e11bio/volara-torch" }
